--- a/index.html
+++ b/index.html
@@ -38,8 +38,167 @@
         </ul>
         <p>A hair salon for men in Kyiv</p>
         <h1>BarberShop</h1>
-        <p>We are experts in trendy men’s haircuts.
-            We work quickly, carefully and with style.</p>
+        <p>
+          We are experts in trendy men’s haircuts. We work quickly, carefully
+          and with style.
+        </p>
+      </section>
+      <section>
+        <p>About</p>
+        <h2>Best Barbershop in your city</h2>
+        <p>
+          If you want to add more confidence to your image, you should
+          definitely visit us.
+        </p>
+        <p>
+          We are a team that never stops at what has been achieved and are
+          thirsty for changes. And when you fall into the hands of our master,
+          you will never be the same again. We are a team that is always "on the
+          same wave" with clients. Therefore, we are always ready to improve
+          everyone who comes to us!
+        </p>
+        <button type="button">Online-booking</button>
+      </section>
+      <section>
+        <p>Spend your time with the best masters</p>
+        <h2>Services and prices</h2>
+        <table>
+          <tr>
+            <td>Men’s haircut</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Beard trim</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Mustache trim</td>
+            <td>from 200 uah.</td>
+          </tr>
+          <tr>
+            <td>Straight razor shave</td>
+            <td>from 200 uah.</td>
+          </tr>
+        </table>
+        <table>
+          <tr>
+            <td>Trainee’s haircut</td>
+            <td>from 50 uah.</td>
+          </tr>
+          <tr>
+            <td>Haircut under the nozzle</td>
+            <td>from 200 uah.</td>
+          </tr>
+          <tr>
+            <td>Children’s haircut (0-12 y.o.)</td>
+            <td>from 300 uah.</td>
+          </tr>
+          <tr>
+            <td>Camouflage of gray hair</td>
+            <td>from 200 uah.</td>
+          </tr>
+        </table>
+        <button type="button">online-booking</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>600<span>+</span></h3>
+            <p>Satisfied customers per day</p>
+          </li>
+          <li>
+            <h3>50<span>+</span></h3>
+            <p>Awards for excellent service</p>
+          </li>
+          <li>
+            <h3>20<span>+</span></h3>
+            <p>Kyiv’s best barbers</p>
+          </li>
+          <li>
+            <h3>100<span>+</span></h3>
+            <p>Gifts for regular customers</p>
+          </li>
+        </ul>
+        <p>Old traditional school</p>
+        <h2>&#191;Why people come to us?</h2>
+        <p>
+          Only good things are said about us. But it's better to see and feel 1
+          time than read 10 times.
+        </p>
+      </section>
+      <section>
+        <p>For true enjoyers of the atmosphere</p>
+        <h2>Our barbers</h2>
+        <ul>
+          <li>
+            <img src="./img/barber-1.jpg" alt="Picture barber John Smith" />
+            <h3>John Smith</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li>
+                <a href="#"><img src="./img/instagram.svg" alt="Istagram" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/twitter.svg" alt="Twitter" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/facebook.svg" alt="Facebook" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/linkedin.svg" alt="Linkedin" /></a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./img/barber-2.jpg" alt="Michele Doe" />
+            <h3>Michele Doe</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li>
+                <a href="#"><img src="./img/instagram.svg" alt="Istagram" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/twitter.svg" alt="Twitter" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/facebook.svg" alt="Facebook" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/linkedin.svg" alt="Linkedin" /></a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <img src="./img/barber-3.jpg" alt="Picture barber Alan Black" />
+            <h3>Alan Black</h3>
+            <p>Extreme Barber</p>
+            <ul>
+              <li>
+                <a href="#"><img src="./img/instagram.svg" alt="Istagram" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/twitter.svg" alt="Twitter" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/facebook.svg" alt="Facebook" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./img/linkedin.svg" alt="Linkedin" /></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!-- Прихований заголовок h2 -->
+        <h2 hidden>Our works</h2>
+        <p>In Latin, "barba" means "beard"</p>
+        <ul>
+          <li><img src="./img/Barba-1.jpg" alt="Barber work 1" /></li>
+          <li><img src="./img/Barba-2.jpg" alt="Barber work 2" /></li>
+          <li><img src="./img/Barba-3.jpg" alt="Barber work 3" /></li>
+          <li><img src="./img/Barba-4.jpg" alt="Barber work 4" /></li>
+        </ul>
       </section>
     </main>
   </body>
