--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
         </p>
       </section>
       <section>
+        <ul>
+          <li>
+            <img
+              src="./img/about-img-1.jpg"
+              alt="Haircut"
+              width="270"
+              height="445"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/about-img-2.jpg"
+              alt="Haircut"
+              width="270"
+              height="445"
+            />
+          </li>
+        </ul>
         <p>About</p>
         <h2>Best Barbershop in your city</h2>
         <p>
@@ -62,7 +80,44 @@
       <section>
         <p>Spend your time with the best masters</p>
         <h2>Services and prices</h2>
-        <table>
+        <ul>
+          <li>
+            <p>Men’s haircut</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Beard trim</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Mustache trim</p>
+            <p>from 200 uah.</p>
+          </li>
+          <li>
+            <p>Straight razor shave</p>
+            <p>from 200 uah.</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p>Trainee’s haircut</p>
+            <p>from 50 uah.</p>
+          </li>
+          <li>
+            <p>Haircut under the nozzle</p>
+            <p>from 200 uah.</p>
+          </li>
+          <li>
+            <p>Children’s haircut (0-12 y.o.)</p>
+            <p>from 300 uah.</p>
+          </li>
+          <li>
+            <p>Camouflage of gray hair</p>
+            <p>from 200 uah.</p>
+          </li>
+        </ul>
+        <!-- Знизу перелік цін зроблено таблицею та закоментовано -->
+        <!-- <table> 
           <tr>
             <td>Men’s haircut</td>
             <td>from 300 uah.</td>
@@ -97,25 +152,25 @@
             <td>Camouflage of gray hair</td>
             <td>from 200 uah.</td>
           </tr>
-        </table>
+        </table>-->
         <button type="button">online-booking</button>
       </section>
       <section>
         <ul>
           <li>
-            <h3>600<span>+</span></h3>
+            <span>600</span>
             <p>Satisfied customers per day</p>
           </li>
           <li>
-            <h3>50<span>+</span></h3>
+            <span>50</span>
             <p>Awards for excellent service</p>
           </li>
           <li>
-            <h3>20<span>+</span></h3>
+            <span>20</span>
             <p>Kyiv’s best barbers</p>
           </li>
           <li>
-            <h3>100<span>+</span></h3>
+            <span>100</span>
             <p>Gifts for regular customers</p>
           </li>
         </ul>
@@ -131,7 +186,12 @@
         <h2>Our barbers</h2>
         <ul>
           <li>
-            <img src="./img/barber-1.jpg" alt="Picture barber John Smith" />
+            <img
+              src="./img/barber-1.jpg"
+              alt="Picture barber John Smith"
+              width="370"
+              height="346"
+            />
             <h3>John Smith</h3>
             <p>Extreme Barber</p>
             <ul>
@@ -150,7 +210,12 @@
             </ul>
           </li>
           <li>
-            <img src="./img/barber-2.jpg" alt="Michele Doe" />
+            <img
+              src="./img/barber-2.jpg"
+              alt="Michele Doe"
+              width="370"
+              height="346"
+            />
             <h3>Michele Doe</h3>
             <p>Extreme Barber</p>
             <ul>
@@ -169,7 +234,12 @@
             </ul>
           </li>
           <li>
-            <img src="./img/barber-3.jpg" alt="Picture barber Alan Black" />
+            <img
+              src="./img/barber-3.jpg"
+              alt="Picture barber Alan Black"
+              width="370"
+              height="346"
+            />
             <h3>Alan Black</h3>
             <p>Extreme Barber</p>
             <ul>
@@ -194,12 +264,81 @@
         <h2 hidden>Our works</h2>
         <p>In Latin, "barba" means "beard"</p>
         <ul>
-          <li><img src="./img/Barba-1.jpg" alt="Barber work 1" /></li>
-          <li><img src="./img/Barba-2.jpg" alt="Barber work 2" /></li>
-          <li><img src="./img/Barba-3.jpg" alt="Barber work 3" /></li>
-          <li><img src="./img/Barba-4.jpg" alt="Barber work 4" /></li>
+          <li>
+            <img
+              src="./img/Barba-1.jpg"
+              alt="Barber work 1"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/Barba-2.jpg"
+              alt="Barber work 2"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/Barba-3.jpg"
+              alt="Barber work 3"
+              width="270"
+              height="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/Barba-4.jpg"
+              alt="Barber work 4"
+              width="270"
+              height="360"
+            />
+          </li>
         </ul>
       </section>
+      <section>
+        <h2>Online-booking</h2>
+        <!-- Тут мають бути форми -->
+      </section>
+      <section>
+        <h2>Contacts</h2>
+        <address>
+          <ul>
+            <li>
+              <a
+                href="https://goo.gl/maps/NWQiDmaMc9SMNRJZ7"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >st. Vasilkivska, 7A <br />
+                Kyiv, 08132</a
+              >
+            </li>
+            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+            <li>
+              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            </li>
+          </ul>
+        </address>
+        <h3>Working hours</h3>
+        <p>Every day from 9:00 to 22:00</p>
+      </section>
     </main>
+    <footer>
+      <p>&copy;Copyright 2020</p>
+      <ul>
+        <li>
+          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a href="" target="_blank" rel="noopener noreferrer nofollow"
+            >Youtube</a
+          >
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
