--- a/index.html
+++ b/index.html
@@ -20,39 +20,55 @@
           <img src="./img/logo.svg" alt="Site logo" />
         </a>
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link"href="">About</a></li>
-          <li class="header-item"><a class="header-link" href="">Services and prices</a></li>
-          <li class="header-item"><a class="header-link" href="">Barbers</a></li>
-          <li class="header-item"><a class="header-link" href="">Contacts</a></li>
+          <li class="header-item"><a class="header-link" href="">About</a></li>
+          <li class="header-item">
+            <a class="header-link" href="">Services and prices</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="">Barbers</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <a class="header-phone" href="tel:+380441111111">+38 044 111 11 11</a>
-      <button class="header-btn" type="button">Online-booking</button>
+      <a class="header-phone link" href="tel:+380441111111"
+        >+38 044 111 11 11</a
+      >
+      <button class="header-btn btn" type="button">Online-booking</button>
     </header>
     <main>
-      <section>
-        <ul>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+      <section class="hero">
+        <ul class="hero-list list">
+          <li class="hero-item">
+            <a
+              class="hero-link link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
               >Instagram</a
             >
           </li>
-          <li>
-            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+          <li class="hero-item">
+            <a
+              class="hero-link link"
+              href=""
+              target="_blank"
+              rel="noopener noreferrer nofollow"
               >Youtube</a
             >
           </li>
         </ul>
-        <p>A hair salon for men in Kyiv</p>
-        <h1>BarberShop</h1>
-        <p>
+        <p class="hero-top-text top-text">A hair salon for men in Kyiv</p>
+        <h1 class="hero-title">BarberShop</h1>
+        <p class="hero-bottom-text">
           We are experts in trendy men’s haircuts. We work quickly, carefully
           and with style.
         </p>
       </section>
-      <section>
-        <ul>
-          <li>
+      <section class="about">
+        <ul class="about-list list">
+          <li class="about-item">
             <img
               src="./img/about-img-1.jpg"
               alt="Haircut"
@@ -60,7 +76,7 @@
               height="445"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./img/about-img-2.jpg"
               alt="Haircut"
@@ -69,58 +85,60 @@
             />
           </li>
         </ul>
-        <p>About</p>
-        <h2>Best Barbershop in your city</h2>
-        <p>
+        <p class="about-top-text top-text">About</p>
+        <h2 class="about-title title">Best Barbershop in your city</h2>
+        <p class="about-bottom-text">
           If you want to add more confidence to your image, you should
           definitely visit us.
         </p>
-        <p>
+        <p class="about-text">
           We are a team that never stops at what has been achieved and are
           thirsty for changes. And when you fall into the hands of our master,
           you will never be the same again. We are a team that is always "on the
           same wave" with clients. Therefore, we are always ready to improve
           everyone who comes to us!
         </p>
-        <button type="button">Online-booking</button>
+        <button type="button" class="about-btn btn">Online-booking</button>
       </section>
-      <section>
-        <p>Spend your time with the best masters</p>
-        <h2>Services and prices</h2>
-        <ul>
-          <li>
-            <p>Men’s haircut</p>
-            <p>from 300 uah.</p>
+      <section class="prices">
+        <p class="prices-top-text top-text">
+          Spend your time with the best masters
+        </p>
+        <h2 class="prices-title title">Services and prices</h2>
+        <ul class="prices-list list">
+          <li class="prices-item">
+            <p class="prices-item-text">Men’s haircut</p>
+            <p class="prices-item-text">from 300 uah.</p>
           </li>
-          <li>
-            <p>Beard trim</p>
-            <p>from 300 uah.</p>
+          <li class="prices-item">
+            <p class="prices-item-text">Beard trim</p>
+            <p class="prices-item-text">from 300 uah.</p>
           </li>
-          <li>
-            <p>Mustache trim</p>
-            <p>from 200 uah.</p>
+          <li class="prices-item">
+            <p class="prices-item-text">Mustache trim</p>
+            <p class="prices-item-text">from 200 uah.</p>
           </li>
-          <li>
-            <p>Straight razor shave</p>
-            <p>from 200 uah.</p>
+          <li class="prices-item">
+            <p class="prices-item-text">Straight razor shave</p>
+            <p class="prices-item-text">from 200 uah.</p>
           </li>
         </ul>
-        <ul>
-          <li>
-            <p>Trainee’s haircut</p>
-            <p>from 50 uah.</p>
+        <ul class="prices-list list">
+          <li class="prices-item">
+            <p class="prices-item-text">Trainee’s haircut</p>
+            <p class="prices-item-text">from 50 uah.</p>
           </li>
-          <li>
-            <p>Haircut under the nozzle</p>
-            <p>from 200 uah.</p>
+          <li class="prices-item">
+            <p class="prices-item-text">Haircut under the nozzle</p>
+            <p class="prices-item-text">from 200 uah.</p>
           </li>
-          <li>
-            <p>Children’s haircut (0-12 y.o.)</p>
-            <p>from 300 uah.</p>
+          <li class="prices-item">
+            <p class="prices-item-text">Children’s haircut (0-12 y.o.)</p>
+            <p class="prices-item-text">from 300 uah.</p>
           </li>
-          <li>
-            <p>Camouflage of gray hair</p>
-            <p>from 200 uah.</p>
+          <li class="prices-item">
+            <p class="prices-item-text">Camouflage of gray hair</p>
+            <p class="prices-item-text">from 200 uah.</p>
           </li>
         </ul>
         <!-- Знизу перелік цін зроблено таблицею та закоментовано -->
@@ -160,47 +178,49 @@
             <td>from 200 uah.</td>
           </tr>
         </table>-->
-        <button type="button">online-booking</button>
+        <button type="button" class="prices-btn btn">online-booking</button>
       </section>
-      <section>
-        <ul>
-          <li>
-            <span>600</span>
-            <p>Satisfied customers per day</p>
+      <section class="benefits">
+        <ul class="benefits-list list">
+          <li class="benefits-item">
+            <span class="count">600</span>
+            <p class="benefits-item-text">Satisfied customers per day</p>
           </li>
-          <li>
-            <span>50</span>
-            <p>Awards for excellent service</p>
+          <li class="benefits-item">
+            <span class="count">50</span>
+            <p class="benefits-item-text">Awards for excellent service</p>
           </li>
-          <li>
-            <span>20</span>
-            <p>Kyiv’s best barbers</p>
+          <li class="benefits-item">
+            <span class="count">20</span>
+            <p class="benefits-item-text">Kyiv’s best barbers</p>
           </li>
-          <li>
-            <span>100</span>
-            <p>Gifts for regular customers</p>
+          <li class="benefits-item">
+            <span class="count">100</span>
+            <p class="">Gifts for regular customers</p>
           </li>
         </ul>
-        <p>Old traditional school</p>
-        <h2>&#191;Why people come to us?</h2>
-        <p>
+        <p class="benefits-top-text top-text">Old traditional school</p>
+        <h2 class="benefits-title title">&#191;Why people come to us?</h2>
+        <p class="benefits-bottom-text">
           Only good things are said about us. But it's better to see and feel 1
           time than read 10 times.
         </p>
       </section>
-      <section>
-        <p>For true enjoyers of the atmosphere</p>
-        <h2>Our barbers</h2>
-        <ul>
-          <li>
+      <section class="barbers">
+        <p class="barbers-top-text top-text">
+          For true enjoyers of the atmosphere
+        </p>
+        <h2 class="barbers-title title">Our barbers</h2>
+        <ul class="barbers-list list">
+          <li class="barbers-item">
             <img
               src="./img/barber-1.jpg"
               alt="Picture barber John Smith"
               width="370"
               height="346"
             />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barbers-subtitle">John Smith</h3>
+            <p class="barbers-item-text">Extreme Barber</p>
             <ul>
               <li>
                 <a href="#"><img src="./img/instagram.svg" alt="Istagram" /></a>
@@ -223,8 +243,8 @@
               width="370"
               height="346"
             />
-            <h3>Michele Doe</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barbers-subtitle">Michele Doe</h3>
+            <p class="barbers-item-text">Extreme Barber</p>
             <ul>
               <li>
                 <a href="#"><img src="./img/instagram.svg" alt="Istagram" /></a>
@@ -247,8 +267,8 @@
               width="370"
               height="346"
             />
-            <h3>Alan Black</h3>
-            <p>Extreme Barber</p>
+            <h3 class="barbers-subtitle">Alan Black</h3>
+            <p class="barbers-item-text">Extreme Barber</p>
             <ul>
               <li>
                 <a href="#"><img src="./img/instagram.svg" alt="Istagram" /></a>
