--- a/index.html
+++ b/index.html
@@ -11,34 +11,41 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    ">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigstion">
-        <a class="header-logo" href="">
-          <img src="./img/logo.svg" alt="Site logo" />
-        </a>
-        <ul class="header-list list">
-          <li class="header-item"><a class="header-link" href="">About</a></li>
-          <li class="header-item">
-            <a class="header-link" href="">Services and prices</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="">Barbers</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="header-phone link" href="tel:+380441111111"
-        >+38 044 111 11 11</a
-      >
-      <button class="header-btn btn" type="button">Online-booking</button>
+      <div class="container header-container">
+        <nav class="header-navigstion">
+          <a class="header-logo" href="">
+            <img src="./img/logo.svg" alt="Site logo" />
+          </a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link" href="">About</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="">Services and prices</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="">Barbers</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header-phone link" href="tel:+380441111111"
+          >+38 044 111 11 11</a
+        >
+        <button class="header-btn btn" type="button">Online-booking</button>
+      </div>
     </header>
     <main>
       <section class="hero">
+        <div class="container">
         <ul class="hero-list list">
           <li class="hero-item">
             <a
@@ -59,14 +66,18 @@
             >
           </li>
         </ul>
+        <div class="hero-wrap">
         <p class="hero-top-text top-text">A hair salon for men in Kyiv</p>
         <h1 class="hero-title">BarberShop</h1>
         <p class="hero-bottom-text">
           We are experts in trendy men’s haircuts. We work quickly, carefully
           and with style.
         </p>
+      </div>
+      </div>
       </section>
       <section class="about">
+        <div class="container">
         <ul class="about-list list">
           <li class="about-item">
             <img
@@ -99,8 +110,10 @@
           everyone who comes to us!
         </p>
         <button type="button" class="about-btn btn">Online-booking</button>
+      </div>
       </section>
       <section class="prices">
+        <div class="container">
         <p class="prices-top-text top-text">
           Spend your time with the best masters
         </p>
@@ -179,8 +192,10 @@
           </tr>
         </table>-->
         <button type="button" class="prices-btn btn">online-booking</button>
+      </div>
       </section>
       <section class="benefits">
+        <div class="container">
         <ul class="benefits-list list">
           <li class="benefits-item">
             <span class="count">600</span>
@@ -205,8 +220,10 @@
           Only good things are said about us. But it's better to see and feel 1
           time than read 10 times.
         </p>
+      </div>
       </section>
       <section class="barbers">
+        <div class="container">
         <p class="barbers-top-text top-text">
           For true enjoyers of the atmosphere
         </p>
@@ -285,8 +302,10 @@
             </ul>
           </li>
         </ul>
+      </div>
       </section>
       <section>
+        <div class="container">
         <!-- Прихований заголовок h2 -->
         <h2 hidden>Our works</h2>
         <p>In Latin, "barba" means "beard"</p>
@@ -324,8 +343,10 @@
             />
           </li>
         </ul>
+      </div>
       </section>
       <section>
+        <div class="container">
         <h2>Online-booking</h2>
         <!-- Тут мають бути форми -->
       </section>
@@ -350,6 +371,7 @@
         </address>
         <h3>Working hours</h3>
         <p>Every day from 9:00 to 22:00</p>
+      </div>
       </section>
     </main>
     <footer>
