--- a/index.html
+++ b/index.html
@@ -236,8 +236,10 @@
               width="370"
               height="346"
             />
-            <h3 class="barbers-subtitle">John Smith</h3>
+            <div class="barbers-item-wrap">
+              <h3 class="barbers-subtitle">John Smith</h3>
             <p class="barbers-item-text">Extreme Barber</p>
+            </div>
             <ul>
               <li>
                 <a href="#"><img src="./img/instagram.svg" alt="Istagram" /></a>
